--- a/index.html
+++ b/index.html
@@ -3,9 +3,190 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>Beyond APIs: Collecting Web Data for Research using the National Internet Observatory</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            max-width: 1000px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        header {
+            text-align: center;
+            margin-bottom: 40px;
+            border-bottom: 2px solid #2c3e50;
+            padding-bottom: 20px;
+        }
+        h1 {
+            color: #2c3e50;
+            margin-bottom: 10px;
+        }
+        h2 {
+            color: #3498db;
+            margin-top: 30px;
+            border-bottom: 1px solid #eee;
+            padding-bottom: 10px;
+        }
+        .organizer {
+            margin-bottom: 30px;
+            padding: 15px;
+            background-color: #f9f9f9;
+            border-radius: 5px;
+        }
+        .organizer h3 {
+            margin-top: 0;
+            color: #2c3e50;
+        }
+        .schedule {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 20px 0;
+        }
+        .schedule th, .schedule td {
+            border: 1px solid #ddd;
+            padding: 8px 12px;
+            text-align: left;
+        }
+        .schedule th {
+            background-color: #3498db;
+            color: white;
+        }
+        .schedule tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+        footer {
+            margin-top: 40px;
+            text-align: center;
+            font-size: 0.9em;
+            color: #7f8c8d;
+            border-top: 1px solid #eee;
+            padding-top: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header>
+        <h1>Beyond APIs: Collecting Web Data for Research using the National Internet Observatory</h1>
+        <p><em>A Tutorial at ICWSM 2025</em></p>
+    </header>
+
+    <section id="abstract">
+        <h2>Abstract</h2>
+        <p>The Internet serves as a vital platform for information access and global connectivity.
+        Widespread online engagement offers unprecedented opportunities to study human behavior at scale, yet researchers face significant ethical and technical barriers when attempting to collect data for academic studies.</p>
+
+        <p>In particular, major social media platforms like Facebook and Twitter have progressively restricted access to their official Application Programming Interfaces (APIs), which previously served as primary tools for researchers to create customized datasets from specific platforms for studying online content production and engagement behavior.</p>
+
+        <p>This tutorial introduces the National Internet Observatory (NIO), an alternative data collection framework and infrastructure designed to help researchers study online behavior, with a particular focus on content viewing—the predominant form of online activity.
+        The tutorial presents NIO's informed data donation process, participant demographics and behavioral traces, and secure computing infrastructure.</p>
+
+        <p>The tutorial incorporates interactive activities and hands-on sessions that demonstrate NIO's capabilities for enabling novel cross-disciplinary and cross-platform research across web and social media environments.</p>
+    </section>
+
+    <section id="prerequisites">
+        <h2>Prerequisites</h2>
+        <p>There are no formal prerequisites for participation. We encourage anyone interested in online activity data collection and research to join. While a background in digital behavioral research helps participants better understand the challenges and opportunities that NIO presents, it is not required to learn about this new data collection infrastructure.</p>
+    </section>
+
+    <section id="duration">
+        <h2>Duration</h2>
+        <p>The tutorial is 3 hours (180 minutes) long, designed as one continuous half-day session.</p>
+
+        <h3>Schedule</h3>
+        <table class="schedule">
+            <tr>
+                <th>Duration</th>
+                <th>Activity</th>
+                <th>Description</th>
+            </tr>
+            <tr>
+                <td>25m</td>
+                <td>NIO Overview</td>
+                <td>Overview presentation on NIO infrastructure, data collection basics, and research vision. Discussion of existing frameworks for online activity data collection across disciplines and their pros/cons.</td>
+            </tr>
+            <tr>
+                <td>20m</td>
+                <td>Interactive data analysis: requests gathering</td>
+                <td>Gathering participant requests for data analyses on platform-specific content, trace data vs survey responses, cross-platform behavior, etc.</td>
+            </tr>
+            <tr>
+                <td>10m</td>
+                <td>Break</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>20m</td>
+                <td>Data collection (in depth)</td>
+                <td>Presentation on Mobile, Desktop, and Survey Data. Includes mechanisms of data collection, organized data collections and data products for research, and sample size estimates.</td>
+            </tr>
+            <tr>
+                <td>20m</td>
+                <td>Research findings</td>
+                <td>Presentation on some existing analyses and research that uses NIO data. Highlights concrete research possibilities.</td>
+            </tr>
+            <tr>
+                <td>30m</td>
+                <td>Hands-on dataset exploration session</td>
+                <td>Participants access and explore an aggregated dataset built using NIO on their own machines.</td>
+            </tr>
+            <tr>
+                <td>10m</td>
+                <td>Break</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>30m</td>
+                <td>Interactive data analysis: results presentation</td>
+                <td>Presenting requested data analyses. Demonstrating analyses requested by participants earlier.</td>
+            </tr>
+            <tr>
+                <td>15m</td>
+                <td>Q&A + Future datasets feedback</td>
+                <td>Open-ended Q&A session with all participants, and space for feedback about what participants would like NIO to collect.</td>
+            </tr>
+        </table>
+    </section>
+
+    <section id="outcomes">
+        <h2>Learning Outcomes</h2>
+        <p>By the end of the tutorial, participants will:</p>
+        <ol>
+            <li>Learn about various methods of online activity data collection along with their pros and cons.</li>
+            <li>Learn about a new infrastructure and framework for data collection in the post-API age.</li>
+            <li>Learn about the research and analytical possibilities enabled by NIO and data donations, including the cross-platform potential of working with participants browsing activity, the kinds of research enabled by trace data being linked with survey data, and the interdisciplinary uses of these alternative data collection methods.</li>
+            <li>Understand the data collected by NIO and how it could inform their own ongoing or future research.</li>
+        </ol>
+    </section>
+
+    <section id="organizers">
+        <h2>Organizers</h2>
+
+        <div class="organizer">
+            <h3>Dr. Pranav Goel</h3>
+            <p><strong>Primary Contact:</strong> p.goel@northeastern.edu | <a href="https://pranav-goel.github.io" target="_blank">pranav-goel.github.io</a></p>
+            <p>Dr. Goel is a Postdoctoral Research Associate at the Network Science Institute, Northeastern University, USA. He obtained his PhD in Computer Science from the University of Maryland, College Park. His research interests span computational social science & natural language processing, including text-as-data applications in computational political science, analyzing framing in news and social media, and understanding misinformation narratives, and improving topic model evaluation and their ability to assist practitioners.</p>
+            <p>Currently, he is exploring cross-platform news consumption patterns, assessing the digital local news landscape, and studying the interaction between self-reported survey data and behaviors drawn from observed trace data. His research has been published at top conferences, including winning the 'Outstanding Study Design' award at ICWSM 2023.</p>
+        </div>
+
+        <div class="organizer">
+            <h3>Dr. Kai-Cheng Yang</h3>
+            <p><strong>Contact:</strong> yang3kc@gmail.com | <a href="https://www.kaichengyang.me" target="_blank">www.kaichengyang.me</a></p>
+            <p>Dr. Yang is a Postdoctoral Research Associate at the Network Science Institute, Northeastern University, USA. He obtained his PhD in Informatics from the Luddy School of Informatics, Computing, and Engineering at Indiana University Bloomington. His research aims to create safe, fair, and trustworthy online information platforms by identifying how malicious actors and flawed systems distort information flow and developing effective countermeasures.</p>
+            <p>His work spans social bots, misinformation, and algorithmic biases. Currently, he is exploring how generative AI is being misused in these contexts and how to harness this technology to protect against these threats. He built popular tools, such as Botometer, that have served tens of thousands of users.</p>
+        </div>
+
+        <div class="organizer">
+            <h3>Dr. Scott Allen Cambo</h3>
+            <p><strong>Contact:</strong> s.cambo@northeastern.edu | <a href="https://www.scottallencambo.com" target="_blank">www.scottallencambo.com</a></p>
+            <p>Dr. Cambo is a Senior Data Scientist and Head of Data Science at the National Internet Observatory at Northeastern University, USA. He earned his PhD in Technology and Social Behavior from Northwestern University. His research explores and validates computational methods for analyzing subjective differences between both manual labeling approaches using crowdsourced labor and automated labeling approaches using machine learning.</p>
+            <p>In his private sector work, Scott has held a variety of critical data science roles at civic tech and responsible AI startups where he developed products for Human-AI Collaboration and designed an algorithm auditing process for NYC LL 144. More recently, he served as General Manager for the AI Incident Database where he worked with both the Center for Advancing Safety in Machine Intelligence (CASMI) and Underwriters Laboratory Research Institute (ULRI) to improve the way we collect, annotate, and share data regarding AI harm.</p>
+        </div>
+    </section>
+
+    <footer>
+        <p>© 2025 National Internet Observatory, Northeastern University</p>
+    </footer>
 </body>
 </html>
