--- a/index.html
+++ b/index.html
@@ -5,53 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beyond APIs: Collecting Web Data for Research using the National Internet Observatory</title>
     <link rel="stylesheet" href="styles.css">
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            // Add click event listeners to navbar links for smooth scrolling
-            document.querySelectorAll('.navbar a').forEach(link => {
-                link.addEventListener('click', function(e) {
-                    e.preventDefault();
-
-                    // Get the target section id
-                    const targetId = this.getAttribute('href');
-                    const targetElement = document.querySelector(targetId);
-
-                    // Smooth scroll to the target section
-                    window.scrollTo({
-                        top: targetElement.offsetTop - 70, // Offset for navbar height
-                        behavior: 'smooth'
-                    });
-
-                    // Update active class
-                    document.querySelectorAll('.navbar a').forEach(navLink => {
-                        navLink.classList.remove('active');
-                    });
-                    this.classList.add('active');
-                });
-            });
-
-            // Update active nav item on scroll
-            window.addEventListener('scroll', function() {
-                const scrollPosition = window.scrollY;
-
-                // Get all sections
-                document.querySelectorAll('section').forEach(section => {
-                    const sectionTop = section.offsetTop - 100;
-                    const sectionBottom = sectionTop + section.offsetHeight;
-
-                    if (scrollPosition >= sectionTop && scrollPosition < sectionBottom) {
-                        const currentId = '#' + section.getAttribute('id');
-                        document.querySelectorAll('.navbar a').forEach(navLink => {
-                            navLink.classList.remove('active');
-                            if (navLink.getAttribute('href') === currentId) {
-                                navLink.classList.add('active');
-                            }
-                        });
-                    }
-                });
-            });
-        });
-    </script>
+    <script src="script.js"></script>
 </head>
 <body>
     <header>
