🌟 feat(html): add logo to enhance branding and user recognition

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <header>
+        <div class="logo-container">
+            <img src="nio_logo.png" alt="National Internet Observatory Logo" class="logo">
+        </div>
         <h1>Beyond APIs: Collecting Web Data for Research using the National Internet Observatory</h1>
         <p><em>A Tutorial at ICWSM 2025</em></p>
     </header>
