--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
     <header>
         <div class="logo-container">
-            <img src="nio_logo.png" alt="National Internet Observatory Logo" class="logo">
+            <a href="https://nationalinternetobservatory.org" target="_blank">
+                <img src="nio_logo.png" alt="National Internet Observatory Logo" class="logo">
+            </a>
         </div>
         <h1>Beyond APIs: Collecting Web Data for Research using the National Internet Observatory</h1>
         <p><em>A Tutorial at ICWSM 2025</em></p>
@@ -114,24 +116,39 @@
         <h2>Organizers</h2>
 
         <div class="organizer">
-            <h3>Dr. Pranav Goel</h3>
-            <p><strong>Primary Contact:</strong> p.goel@northeastern.edu | <a href="https://pranav-goel.github.io" target="_blank">pranav-goel.github.io</a></p>
-            <p>Dr. Goel is a Postdoctoral Research Associate at the Network Science Institute, Northeastern University, USA. He obtained his PhD in Computer Science from the University of Maryland, College Park. His research interests span computational social science & natural language processing, including text-as-data applications in computational political science, analyzing framing in news and social media, and understanding misinformation narratives, and improving topic model evaluation and their ability to assist practitioners.</p>
-            <p>Currently, he is exploring cross-platform news consumption patterns, assessing the digital local news landscape, and studying the interaction between self-reported survey data and behaviors drawn from observed trace data. His research has been published at top conferences, including winning the 'Outstanding Study Design' award at ICWSM 2023.</p>
+            <div class="organizer-content">
+                <img src="photos/pranav.jpeg" alt="Dr. Pranav Goel" class="headshot">
+                <div class="organizer-info">
+                    <h3>Dr. Pranav Goel</h3>
+                    <p><strong>Primary Contact:</strong> p.goel@northeastern.edu | <a href="https://pranav-goel.github.io" target="_blank">pranav-goel.github.io</a></p>
+                    <p>Dr. Goel is a Postdoctoral Research Associate at the Network Science Institute, Northeastern University, USA. He obtained his PhD in Computer Science from the University of Maryland, College Park. His research interests span computational social science & natural language processing, including text-as-data applications in computational political science, analyzing framing in news and social media, and understanding misinformation narratives, and improving topic model evaluation and their ability to assist practitioners.</p>
+                    <p>Currently, he is exploring cross-platform news consumption patterns, assessing the digital local news landscape, and studying the interaction between self-reported survey data and behaviors drawn from observed trace data. His research has been published at top conferences, including winning the 'Outstanding Study Design' award at ICWSM 2023.</p>
+                </div>
+            </div>
         </div>
 
         <div class="organizer">
-            <h3>Dr. Kai-Cheng Yang</h3>
-            <p><strong>Contact:</strong> yang3kc@gmail.com | <a href="https://www.kaichengyang.me" target="_blank">www.kaichengyang.me</a></p>
-            <p>Dr. Yang is a Postdoctoral Research Associate at the Network Science Institute, Northeastern University, USA. He obtained his PhD in Informatics from the Luddy School of Informatics, Computing, and Engineering at Indiana University Bloomington. His research aims to create safe, fair, and trustworthy online information platforms by identifying how malicious actors and flawed systems distort information flow and developing effective countermeasures.</p>
-            <p>His work spans social bots, misinformation, and algorithmic biases. Currently, he is exploring how generative AI is being misused in these contexts and how to harness this technology to protect against these threats. He built popular tools, such as Botometer, that have served tens of thousands of users.</p>
+            <div class="organizer-content">
+                <img src="photos/kaicheng.png" alt="Dr. Kai-Cheng Yang" class="headshot">
+                <div class="organizer-info">
+                    <h3>Dr. Kai-Cheng Yang</h3>
+                    <p><strong>Contact:</strong> yang3kc@gmail.com | <a href="https://www.kaichengyang.me" target="_blank">www.kaichengyang.me</a></p>
+                    <p>Dr. Yang is a Postdoctoral Research Associate at the Network Science Institute, Northeastern University, USA. He obtained his PhD in Informatics from the Luddy School of Informatics, Computing, and Engineering at Indiana University Bloomington. His research aims to create safe, fair, and trustworthy online information platforms by identifying how malicious actors and flawed systems distort information flow and developing effective countermeasures.</p>
+                    <p>His work spans social bots, misinformation, and algorithmic biases. Currently, he is exploring how generative AI is being misused in these contexts and how to harness this technology to protect against these threats. He built popular tools, such as Botometer, that have served tens of thousands of users.</p>
+                </div>
+            </div>
         </div>
 
         <div class="organizer">
-            <h3>Dr. Scott Allen Cambo</h3>
-            <p><strong>Contact:</strong> s.cambo@northeastern.edu | <a href="https://www.scottallencambo.com" target="_blank">www.scottallencambo.com</a></p>
-            <p>Dr. Cambo is a Senior Data Scientist and Head of Data Science at the National Internet Observatory at Northeastern University, USA. He earned his PhD in Technology and Social Behavior from Northwestern University. His research explores and validates computational methods for analyzing subjective differences between both manual labeling approaches using crowdsourced labor and automated labeling approaches using machine learning.</p>
-            <p>In his private sector work, Scott has held a variety of critical data science roles at civic tech and responsible AI startups where he developed products for Human-AI Collaboration and designed an algorithm auditing process for NYC LL 144. More recently, he served as General Manager for the AI Incident Database where he worked with both the Center for Advancing Safety in Machine Intelligence (CASMI) and Underwriters Laboratory Research Institute (ULRI) to improve the way we collect, annotate, and share data regarding AI harm.</p>
+            <div class="organizer-content">
+                <img src="photos/scott.png" alt="Dr. Scott Allen Cambo" class="headshot">
+                <div class="organizer-info">
+                    <h3>Dr. Scott Allen Cambo</h3>
+                    <p><strong>Contact:</strong> s.cambo@northeastern.edu | <a href="https://www.scottallencambo.com" target="_blank">www.scottallencambo.com</a></p>
+                    <p>Dr. Cambo is a Senior Data Scientist and Head of Data Science at the National Internet Observatory at Northeastern University, USA. He earned his PhD in Technology and Social Behavior from Northwestern University. His research explores and validates computational methods for analyzing subjective differences between both manual labeling approaches using crowdsourced labor and automated labeling approaches using machine learning.</p>
+                    <p>In his private sector work, Scott has held a variety of critical data science roles at civic tech and responsible AI startups where he developed products for Human-AI Collaboration and designed an algorithm auditing process for NYC LL 144. More recently, he served as General Manager for the AI Incident Database where he worked with both the Center for Advancing Safety in Machine Intelligence (CASMI) and Underwriters Laboratory Research Institute (ULRI) to improve the way we collect, annotate, and share data regarding AI harm.</p>
+                </div>
+            </div>
         </div>
     </section>
 
