🌟 feat(html): optimize image paths for improved loading performance

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         <div class="organizer">
             <div class="organizer-content">
-                <img src="photos/pranav.jpeg" alt="Dr. Pranav Goel" class="headshot">
+                <img src="optimized_photos/pranav.jpeg" alt="Dr. Pranav Goel" class="headshot">
                 <div class="organizer-info">
                     <h3>Dr. Pranav Goel</h3>
                     <p><strong>Primary Contact:</strong> p.goel@northeastern.edu | <a href="https://pranav-goel.github.io" target="_blank">pranav-goel.github.io</a></p>
@@ -129,7 +129,7 @@
 
         <div class="organizer">
             <div class="organizer-content">
-                <img src="photos/kaicheng.png" alt="Dr. Kai-Cheng Yang" class="headshot">
+                <img src="optimized_photos/kaicheng.png" alt="Dr. Kai-Cheng Yang" class="headshot">
                 <div class="organizer-info">
                     <h3>Dr. Kai-Cheng Yang</h3>
                     <p><strong>Contact:</strong> yang3kc@gmail.com | <a href="https://www.kaichengyang.me" target="_blank">www.kaichengyang.me</a></p>
@@ -141,7 +141,7 @@
 
         <div class="organizer">
             <div class="organizer-content">
-                <img src="photos/scott.png" alt="Dr. Scott Allen Cambo" class="headshot">
+                <img src="optimized_photos/scott.png" alt="Dr. Scott Allen Cambo" class="headshot">
                 <div class="organizer-info">
                     <h3>Dr. Scott Allen Cambo</h3>
                     <p><strong>Contact:</strong> s.cambo@northeastern.edu | <a href="https://www.scottallencambo.com" target="_blank">www.scottallencambo.com</a></p>
