🌟 feat(html): include Font Awesome for improved iconography

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <nav class="navbar">
@@ -120,7 +122,13 @@
                 <img src="optimized_photos/pranav.jpeg" alt="Dr. Pranav Goel" class="headshot">
                 <div class="organizer-info">
                     <h3>Dr. Pranav Goel</h3>
-                    <p><strong>Primary Contact:</strong> p.goel@northeastern.edu | <a href="https://pranav-goel.github.io" target="_blank">pranav-goel.github.io</a></p>
+                    <p class="contact-info">
+                        <span class="contact-details">
+                            <span class="contact-label"><strong>Primary Contact:</strong></span>
+                            <a href="mailto:p.goel@northeastern.edu" class="contact-link"><i class="fa-solid fa-envelope"></i> p.goel@northeastern.edu</a> |
+                            <a href="https://pranav-goel.github.io" target="_blank" class="contact-link"><i class="fa-solid fa-globe"></i> pranav-goel.github.io</a>
+                        </span>
+                    </p>
                     <p>Dr. Goel is a Postdoctoral Research Associate at the Network Science Institute, Northeastern University, USA. He obtained his PhD in Computer Science from the University of Maryland, College Park. His research interests span computational social science & natural language processing, including text-as-data applications in computational political science, analyzing framing in news and social media, and understanding misinformation narratives, and improving topic model evaluation and their ability to assist practitioners.</p>
                     <p>Currently, he is exploring cross-platform news consumption patterns, assessing the digital local news landscape, and studying the interaction between self-reported survey data and behaviors drawn from observed trace data. His research has been published at top conferences, including winning the 'Outstanding Study Design' award at ICWSM 2023.</p>
                 </div>
@@ -132,7 +140,13 @@
                 <img src="optimized_photos/kaicheng.png" alt="Dr. Kai-Cheng Yang" class="headshot">
                 <div class="organizer-info">
                     <h3>Dr. Kai-Cheng Yang</h3>
-                    <p><strong>Contact:</strong> yang3kc@gmail.com | <a href="https://www.kaichengyang.me" target="_blank">www.kaichengyang.me</a></p>
+                    <p class="contact-info">
+                        <span class="contact-details">
+                            <span class="contact-label"><strong>Contact:</strong></span>
+                            <a href="mailto:yang3kc@gmail.com" class="contact-link"><i class="fa-solid fa-envelope"></i> yang3kc@gmail.com</a> |
+                            <a href="https://www.kaichengyang.me" target="_blank" class="contact-link"><i class="fa-solid fa-globe"></i> www.kaichengyang.me</a>
+                        </span>
+                    </p>
                     <p>Dr. Yang is a Postdoctoral Research Associate at the Network Science Institute, Northeastern University, USA. He obtained his PhD in Informatics from the Luddy School of Informatics, Computing, and Engineering at Indiana University Bloomington. His research aims to create safe, fair, and trustworthy online information platforms by identifying how malicious actors and flawed systems distort information flow and developing effective countermeasures.</p>
                     <p>His work spans social bots, misinformation, and algorithmic biases. Currently, he is exploring how generative AI is being misused in these contexts and how to harness this technology to protect against these threats. He built popular tools, such as Botometer, that have served tens of thousands of users.</p>
                 </div>
@@ -144,7 +158,13 @@
                 <img src="optimized_photos/scott.png" alt="Dr. Scott Allen Cambo" class="headshot">
                 <div class="organizer-info">
                     <h3>Dr. Scott Allen Cambo</h3>
-                    <p><strong>Contact:</strong> s.cambo@northeastern.edu | <a href="https://www.scottallencambo.com" target="_blank">www.scottallencambo.com</a></p>
+                    <p class="contact-info">
+                        <span class="contact-details">
+                            <span class="contact-label"><strong>Contact:</strong></span>
+                            <a href="mailto:s.cambo@northeastern.edu" class="contact-link"><i class="fa-solid fa-envelope"></i> s.cambo@northeastern.edu</a> |
+                            <a href="https://www.scottallencambo.com" target="_blank" class="contact-link"><i class="fa-solid fa-globe"></i> www.scottallencambo.com</a>
+                        </span>
+                    </p>
                     <p>Dr. Cambo is a Senior Data Scientist and Head of Data Science at the National Internet Observatory at Northeastern University, USA. He earned his PhD in Technology and Social Behavior from Northwestern University. His research explores and validates computational methods for analyzing subjective differences between both manual labeling approaches using crowdsourced labor and automated labeling approaches using machine learning.</p>
                     <p>In his private sector work, Scott has held a variety of critical data science roles at civic tech and responsible AI startups where he developed products for Human-AI Collaboration and designed an algorithm auditing process for NYC LL 144. More recently, he served as General Manager for the AI Incident Database where he worked with both the Center for Advancing Safety in Machine Intelligence (CASMI) and Underwriters Laboratory Research Institute (ULRI) to improve the way we collect, annotate, and share data regarding AI harm.</p>
                 </div>
