--- a/index.html
+++ b/index.html
@@ -25,8 +25,18 @@
                 <img src="nio_logo.png" alt="National Internet Observatory Logo" class="logo">
             </a>
         </div>
-        <h1>Beyond APIs: Collecting Web Data for Research using the National Internet Observatory</h1>
-        <p><em>A Tutorial at ICWSM 2025</em></p>
+        <div class="header-content">
+            <h1>Beyond APIs: Collecting Web Data for Research using the National Internet Observatory</h1>
+            <div class="conference-info">
+                <p><em>A Tutorial at <a href="https://www.icwsm.org/2025/index.html" target="_blank">ICWSM 2025</a></em></p>
+            </div>
+        </div>
+
+        <div class="event-details">
+            <p><i class="fa-solid fa-location-dot"></i> <b>Location:</b> Copenhagen, Denmark</p>
+            <p><i class="fa-solid fa-calendar-day"></i> <b>Workshop Date:</b> June 23, 2025</p>
+            <p><i class="fa-solid fa-calendar-days"></i> <b>Conference Dates:</b> June 23 — 26, 2025</p>
+        </div>
     </header>
 
 
