--- a/index.html
+++ b/index.html
@@ -33,9 +33,18 @@
         </div>
 
         <div class="event-details">
-            <p><i class="fa-solid fa-location-dot"></i> <b>Location:</b> Copenhagen, Denmark</p>
-            <p><i class="fa-solid fa-calendar-day"></i> <b>Workshop Date:</b> June 23, 2025</p>
-            <p><i class="fa-solid fa-calendar-days"></i> <b>Conference Dates:</b> June 23 — 26, 2025</p>
+            <p>
+                <i class="fa-solid fa-location-dot"></i>
+                <b>Location:</b> Copenhagen, Denmark
+            </p>
+            <p>
+                <i class="fa-solid fa-calendar-day"></i>
+                <b>Tutorial Date:</b> June 23, 2025
+            </p>
+            <p>
+                <i class="fa-solid fa-calendar-days"></i>
+                <b>Conference Dates:</b> June 23 — 26, 2025
+            </p>
         </div>
     </header>
 
