🎨 style(html): enhance header content for improved readability

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="header-content">
             <h1>Beyond APIs: Collecting Web Data for Research using the National Internet Observatory</h1>
             <div class="conference-info">
-                <p><em>A Tutorial at <a href="https://www.icwsm.org/2025/index.html" target="_blank">ICWSM 2025</a></em></p>
+                <p>A Tutorial at <a href="https://www.icwsm.org/2025/index.html" target="_blank">ICWSM 2025</a></p>
             </div>
         </div>
 
