🎨 style(html): enhance tutorial link with external reference for clarity

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <p>In particular, major social media platforms like Facebook and Twitter have progressively restricted access to their official Application Programming Interfaces (APIs), which previously served as primary tools for researchers to create customized datasets from specific platforms for studying online content production and engagement behavior.</p>
 
-        <p>This tutorial introduces the National Internet Observatory (NIO), an alternative data collection framework and infrastructure designed to help researchers study online behavior, with a particular focus on content viewing—the predominant form of online activity.
+        <p>This tutorial introduces the <a href="https://nationalinternetobservatory.org" target="_blank">National Internet Observatory (NIO)</a>, an alternative data collection framework and infrastructure designed to help researchers study online behavior, with a particular focus on content viewing—the predominant form of online activity.
         The tutorial presents NIO's informed data donation process, participant demographics and behavioral traces, and secure computing infrastructure.</p>
 
         <p>The tutorial incorporates interactive activities and hands-on sessions that demonstrate NIO's capabilities for enabling novel cross-disciplinary and cross-platform research across web and social media environments.</p>
