🔄 refactor(html): remove redundant information for clarity

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         </span>
                     </p>
                     <p>Dr. Yang is a Postdoctoral Research Associate at the Network Science Institute, Northeastern University, USA. He obtained his PhD in Informatics from the Luddy School of Informatics, Computing, and Engineering at Indiana University Bloomington. His research aims to create safe, fair, and trustworthy online information platforms by identifying how malicious actors and flawed systems distort information flow and developing effective countermeasures.</p>
-                    <p>His work spans social bots, misinformation, and algorithmic biases. Currently, he is exploring how generative AI is being misused in these contexts and how to harness this technology to protect against these threats. He built popular tools, such as Botometer, that have served tens of thousands of users.</p>
+                    <p>His work spans social bots, misinformation, and algorithmic biases. Currently, he is exploring how generative AI is being misused in these contexts and how to harness this technology to protect against these threats.</p>
                 </div>
             </div>
         </div>
